# hype CMakeLists.txt
# Copyright (C) 2015 Alessandro Ghedini <alessandro@ghedini.me>
# This file is released under the 2 clause BSD license, see COPYING

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(hype C)

SET(INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_SEARCH_MODULE(LUA REQUIRED luajit lua5.2 lua5.1)

FIND_PACKAGE(PCAP REQUIRED)

FILE(GLOB SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/*.c")
FILE(GLOB LPACK_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "deps/lpack/*.c")
FILE(GLOB SIPHASH_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "deps/siphash/*.c")
FILE(GLOB TA_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "deps/ta/*.c")

ADD_EXECUTABLE(hype ${SOURCES} ${LPACK_SOURCES} ${SIPHASH_SOURCES} ${TA_SOURCES})

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}/deps/lpack
	${CMAKE_CURRENT_SOURCE_DIR}/deps/siphash
	${CMAKE_CURRENT_SOURCE_DIR}/deps/ta
	${CMAKE_CURRENT_SOURCE_DIR}/deps/ut
	${CMAKE_CURRENT_SOURCE_DIR}/src
	${LUA_INCLUDE_DIRS}
	${PCAP_INCLUDE_DIRS}
	${CMAKE_CURRENT_BINARY_DIR}
)

SET_TARGET_PROPERTIES(hype PROPERTIES
	COMPILE_FLAGS "-Wall -pedantic -g -std=gnu99 -D_GNU_SOURCE"
)

TARGET_LINK_LIBRARIES(hype
	"-lm"
	"-lpthread"
	"-lresolv"
	${LUA_LIBRARIES}
	${PCAP_LIBRARY}
)

INSTALL(TARGETS hype DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)

INSTALL(FILES
	${PROJECT_SOURCE_DIR}/docs/hype.1
	DESTINATION ${CMAKE_INSTALL_PREFIX}/share/man/man1
)
